Fix modern media controls visibility issues

This CL fixes a couple of visibility issues for the modern media
controls. First, it only toggles the controls visibility on touch
events instead of all click events. Second, it changes the
ShouldHideMediaControls hover check to only use the hover state of the
button panel and timeline instead of the panel itself, which in modern
media controls covers the entire video element. This fixes an issue on
desktop where the controls wouldn't hide during fullscreen since the
controls were always hovered.

Bug: 812890
Change-Id: I8cb30841020e7f3ffdadc53131a4fa374b4254c2
Reviewed-on: https://chromium-review.googlesource.com/938841
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542564}
Former-commit-id: 2b807a550e8920e9dad58ca6a581c8845fd81bc5