third_party/WebKit/Source/modules/media_controls/elements/MediaControlOverlayPlayButtonElement.cpp
@@ -214,10 +214,12 @@ void MediaControlOverlayPlayButtonElement::DefaultEventHandler(Event* event) {
       // case their is a second tap.
       if (tap_timer_.IsActive())
         return;
+      tap_was_touch_event_ = MediaControlsImpl::IsTouchEvent(event);
       tap_timer_.StartOneShot(kDoubleTapDelay, FROM_HERE);
     } else {
       // Cancel the play pause event.
       tap_timer_.Stop();
+      tap_was_touch_event_.reset();
 
       if (RuntimeEnabledFeatures::DoubleTapToJumpOnVideoEnabled()) {
         // Jump forwards or backwards based on the position of the tap.
@@ -255,7 +257,9 @@ WebSize MediaControlOverlayPlayButtonElement::GetSizeOrDefault() const {
 }
 
 void MediaControlOverlayPlayButtonElement::TapTimerFired(TimerBase*) {
-  GetMediaControls().MaybeToggleControlsFromTap();
+  if (tap_was_touch_event_.value())
+    GetMediaControls().MaybeToggleControlsFromTap();
+  tap_was_touch_event_.reset();
 }
 
 void MediaControlOverlayPlayButtonElement::Trace(blink::Visitor* visitor) {
